add dynamic filtering for articles in ArticleService  - Replaced fixed getAllArticles() with method supporting filters by category, source, keyword, and date - Introduced use of ArticleSpecification with JpaSpecificationExecutor for flexible queries - Ensured results are sorted by publishedAt in descending order - Updated DTO mapping to use method references (Source::getName, Category::getName)